# freally-sourcerer

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE.md  LinuxOS-test.md  README.md  THIRD-PARTY-NOTICES.md  deny.toml  macOS-test.md
.github/workflows/: ci.yml  release.yml
apps/freally-ui/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/freally-ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/freally-ui/src-tauri/icons/: icon.icns
apps/freally-ui/src-tauri/src/: daemon.rs  hotkey.rs  lib.rs  main.rs  menu_spec.rs  native_menu.rs  url_protocol.rs
apps/freally-ui/src-tauri/src/commands/: bookmarks.rs  custom_extractors.rs  excludes.rs  extractors.rs  files.rs  folders.rs  history.rs  icons.rs  index_state.rs  known_paths.rs  mod.rs  query.rs  settings.rs  volumes.rs
apps/freally-ui/src-tauri/src/preview/: fallback.rs  linux.rs  macos.rs  mod.rs  windows_host.rs
apps/freally-ui/src-tauri/tests/: menubar_parity.rs  menubar_wiring.rs  statusbar_parity.rs
apps/sourcerer-ui/: pnpm-lock.yaml
apps/sourcerer-ui/src-tauri/: Cargo.toml
apps/sourcerer-ui/src-tauri/capabilities/: default.json
apps/sourcerer-ui/src-tauri/src/: daemon.rs  lib.rs
apps/sourcerer-ui/src-tauri/src/commands/: bookmarks.rs  custom_extractors.rs  excludes.rs  extractors.rs  files.rs  folders.rs  icons.rs  index_state.rs  mod.rs  network.rs  query.rs  settings.rs  volumes.rs
apps/sourcerer-ui/src-tauri/src/preview/: windows_host.rs
crates/freally-audio/: Cargo.toml
crates/freally-cli/: Cargo.toml
crates/freally-cli/src/: main.rs
crates/freally-cli/tests/: phase_00_scaffold.rs
crates/freally-extractor-host/: Cargo.toml
crates/freally-extractors/: Cargo.toml
crates/freally-fsbench/: Cargo.toml
crates/freally-http/: Cargo.toml
crates/freally-http/src/: lib.rs
crates/freally-i18n/: Cargo.toml
crates/freally-i18n/src/: lib.rs
crates/freally-index/: Cargo.toml
crates/freally-indexd/: Cargo.toml
crates/freally-indexd/polkit/: io.mikeweaver.freally.policy
crates/freally-indexd/src/: bookmarks.rs  history.rs  launchd.rs  lib.rs  main.rs  scanner.rs  service.rs  settings.rs  state.rs  systemd.rs  volumes.rs  windows_service.rs
crates/freally-indexd/tests/: phase_12_indexd_client.rs  phase_12_settings.rs
crates/freally-journal/: Cargo.toml
crates/freally-journal-lin/: Cargo.toml
crates/freally-journal-mac/: Cargo.toml
crates/freally-journal-win/: Cargo.toml
crates/freally-journal/src/: lib.rs
crates/freally-query/: Cargo.toml
crates/freally-query/benches/: filename_lens.rs
crates/freally-query/src/: ast.rs  cache.rs  error.rs  exec.rs  lib.rs  optimizer.rs  opts.rs  parser.rs  quick_filters.rs  report.rs
crates/freally-query/tests/: freally_dsl.rs  phase_05_filename_lens.rs  phase_06_similarity.rs  phase_09_audio.rs  phase_10_query.rs  phase_11_ui_e2e.rs  voidtools_compat.rs  wiring.rs
crates/freally-rpc/: Cargo.toml
crates/freally-similarity/: Cargo.toml
crates/freally-similarity/src/: lib.rs  minhash.rs  store.rs
crates/freally-similarity/tests/: recall.rs
crates/sourcerer-audio/: Cargo.toml
crates/sourcerer-audio/src/: analyze.rs  error.rs  lib.rs
crates/sourcerer-audio/src/measure/: loudness.rs  mod.rs
crates/sourcerer-cli/: Cargo.toml
crates/sourcerer-cli/src/: main.rs
crates/sourcerer-extractor-host/: Cargo.toml
crates/sourcerer-extractor-host/src/: lib.rs  manifest.rs  registry.rs  sandbox.rs
crates/sourcerer-extractors/: Cargo.toml
crates/sourcerer-extractors/src/: blob.rs  lib.rs  queue.rs  sandbox.rs  settings.rs  sink.rs
crates/sourcerer-extractors/src/extractors/: mod.rs  plain_text.rs
crates/sourcerer-fsbench/: Cargo.toml
crates/sourcerer-fsbench/src/: baseline.rs  fast_linux.rs  fast_macos.rs  main.rs  tree_gen.rs
crates/sourcerer-index/: Cargo.toml
crates/sourcerer-index/src/: lib.rs  location.rs  manifest.rs  name_index.rs  pipeline.rs  schema.rs  store.rs
crates/sourcerer-indexd/: Cargo.toml
crates/sourcerer-indexd/polkit/: io.mikeweaver.sourcerer.policy
crates/sourcerer-indexd/src/: history.rs  launchd.rs  lib.rs  main.rs  scanner.rs  service.rs  settings.rs  state.rs  systemd.rs  volumes.rs  windows_service.rs
crates/sourcerer-journal-lin/: Cargo.toml
crates/sourcerer-journal-lin/examples/: phase03_smoke_driver.rs
crates/sourcerer-journal-lin/src/: cursor.rs  event.rs  ffi.rs  flags.rs  lib.rs  subscriber.rs
crates/sourcerer-journal-lin/tests/: integration_journal.rs
crates/sourcerer-journal-mac/: Cargo.toml
crates/sourcerer-journal-mac/examples/: phase02_smoke_driver.rs
crates/sourcerer-journal-mac/src/: cursor.rs  event.rs  ffi.rs  lib.rs  subscriber.rs
crates/sourcerer-journal-mac/tests/: integration_journal.rs
crates/sourcerer-journal-win/: Cargo.toml
crates/sourcerer-journal-win/examples/: phase01_smoke_driver.rs
crates/sourcerer-journal-win/src/: cursor.rs  event.rs  ffi.rs  lib.rs  reasons.rs  subscriber.rs
crates/sourcerer-journal-win/tests/: integration_journal.rs
crates/sourcerer-query/: Cargo.toml
crates/sourcerer-query/benches/: filename_lens.rs
crates/sourcerer-query/src/: ast.rs  cache.rs  error.rs  exec.rs  lib.rs  opts.rs  parser.rs
crates/sourcerer-query/tests/: phase_09_audio.rs  voidtools_compat.rs  wiring.rs
crates/sourcerer-rpc/: Cargo.toml
crates/sourcerer-rpc/src/: dto.rs  error.rs  frame.rs  jsonrpc.rs  lib.rs  path.rs  server.rs  service.rs
crates/sourcerer-rpc/src/transport/: mod.rs  unix.rs  windows.rs
crates/sourcerer-rpc/tests/: phase_12_preview_hosts.rs  phase_12_rpc_transport.rs  phase_12_theme_switch.rs
crates/sourcerer-similarity/: Cargo.toml
crates/sourcerer-similarity/src/: error.rs  lib.rs  store.rs
crates/sourcerer-similarity/tests/: recall.rs
docs/: ARCHITECTURE.md  CHANGELOG.md  SECURITY.md  documentation.html  documents.html  index.html  styles.css
locales/ar/: freally.ftl  sourcerer.ftl
locales/de/: freally.ftl  (+1 more)
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/cmd/: gen_fixture.rs  i18n_lint.rs  icon_build.rs  mod.rs
(+296 files in other folders)
