[workspace]
resolver = "2"
members = [
    "crates/sourcerer-journal",
    "crates/sourcerer-journal-win",
    "crates/sourcerer-journal-mac",
    "crates/sourcerer-journal-lin",
    "crates/sourcerer-index",
    "crates/sourcerer-extractors",
    "crates/sourcerer-audio",
    "crates/sourcerer-similarity",
    "crates/sourcerer-query",
    "crates/sourcerer-http",
    "crates/sourcerer-i18n",
    "crates/sourcerer-cli",
    "crates/sourcerer-indexd",
    "crates/sourcerer-rpc",
    "crates/sourcerer-extractor-host",
    "xtask",
]
exclude = [
    "apps/sourcerer-ui/src-tauri",
]
default-members = [
    "crates/sourcerer-journal",
    "crates/sourcerer-index",
    "crates/sourcerer-extractors",
    "crates/sourcerer-audio",
    "crates/sourcerer-similarity",
    "crates/sourcerer-query",
    "crates/sourcerer-http",
    "crates/sourcerer-i18n",
    "crates/sourcerer-cli",
    "crates/sourcerer-indexd",
    "crates/sourcerer-rpc",
    "crates/sourcerer-extractor-host",
    "xtask",
]

[workspace.package]
version = "0.19.84"
edition = "2024"
rust-version = "1.85"
license = "LicenseRef-MikeWeaver-Proprietary-AllRightsReserved"
repository = "https://github.com/MikesRuthless12/Sourcerer"
authors = ["Mike Weaver <mythodikalone@gmail.com>"]
publish = false

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
