[workspace]
resolver = "2"
members = [
    "crates/freally-journal",
    "crates/freally-journal-win",
    "crates/freally-journal-mac",
    "crates/freally-journal-lin",
    "crates/freally-index",
    "crates/freally-extractors",
    "crates/freally-audio",
    "crates/freally-similarity",
    "crates/freally-query",
    "crates/freally-http",
    "crates/freally-i18n",
    "crates/freally-cli",
    "crates/freally-indexd",
    "crates/freally-rpc",
    "crates/freally-extractor-host",
    "crates/freally-fsbench",
    "xtask",
]
exclude = [
    "apps/freally-ui/src-tauri",
]
default-members = [
    "crates/freally-journal",
    "crates/freally-index",
    "crates/freally-extractors",
    "crates/freally-audio",
    "crates/freally-similarity",
    "crates/freally-query",
    "crates/freally-http",
    "crates/freally-i18n",
    "crates/freally-cli",
    "crates/freally-indexd",
    "crates/freally-rpc",
    "crates/freally-extractor-host",
    "crates/freally-fsbench",
    "xtask",
]

[workspace.package]
version = "0.20.1"
edition = "2024"
rust-version = "1.85"
license = "LicenseRef-MikeWeaver-Proprietary-AllRightsReserved"
repository = "https://github.com/MikesRuthless12/Freally"
authors = ["Mike Weaver <mythodikalone@gmail.com>"]
publish = false

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
