[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Freally build helpers — i18n-lint, third-party-notices, icon-build, release."

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
resvg = "0.45"
tiny-skia = "0.11"
usvg = "0.45"
ico = "0.4"
icns = "0.3"
freally-index = { path = "../crates/freally-index" }
freally-journal = { path = "../crates/freally-journal" }
