[package]
name = "freally-http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Freally HTTPS API server — axum + rustls."

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
