[package]
name = "freally-i18n"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Freally Fluent i18n loader — 18 locales."

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
