[package]
name = "freally-indexd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Freally indexer daemon."

[lib]
name = "freally_indexd"
path = "src/lib.rs"

[[bin]]
name = "freally-indexd"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = "0.8"
walkdir = "2"

freally-rpc = { path = "../freally-rpc" }
freally-index = { path = "../freally-index" }
freally-journal = { path = "../freally-journal" }
freally-query = { path = "../freally-query" }
freally-extractors = { path = "../freally-extractors" }
freally-audio = { path = "../freally-audio" }
freally-similarity = { path = "../freally-similarity" }
freally-extractor-host = { path = "../freally-extractor-host" }

[target.'cfg(windows)'.dependencies]
freally-journal-win = { path = "../freally-journal-win" }
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Services",
    "Win32_Storage_FileSystem",
] }

[target.'cfg(target_os = "macos")'.dependencies]
freally-journal-mac = { path = "../freally-journal-mac" }

[target.'cfg(target_os = "linux")'.dependencies]
freally-journal-lin = { path = "../freally-journal-lin" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
