[package]
name = "freally-similarity"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Freally filename similarity lens — bigram MinHash + LSH (Phase 6)."

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = "0.12"
blake3 = "1"
freally-journal = { path = "../freally-journal" }

[dev-dependencies]
tempfile = "3"
