[package]
name = "sourcerer-audio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Sourcerer audio attribute extractor (Phase 9) — symphonia decode + ebur128 LUFS + true-peak / silence / dynamic-range."

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = "0.12"
symphonia = { version = "0.5", default-features = false, features = [
    "aac",
    "alac",
    "flac",
    "isomp4",
    "mp3",
    "ogg",
    "pcm",
    "vorbis",
    "wav",
    "aiff",
    "opt-simd",
] }
ebur128 = "0.1"

[dev-dependencies]
tempfile = "3"
