[package]
name = "sourcerer-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Sourcerer CLI binary."

[[bin]]
name = "sourcerer"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

sourcerer-rpc = { path = "../sourcerer-rpc" }
sourcerer-query = { path = "../sourcerer-query" }
