[package]
name = "sourcerer-extractor-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Wasm-sandboxed custom-extractor host (TOML schema + wasmtime)."

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
toml = "0.8"
blake3 = "1"
wasmtime = { version = "44", default-features = false, features = ["cranelift", "runtime"] }

[dev-dependencies]
tempfile = "3"
