[package]
name = "sourcerer-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Sourcerer index core — Tantivy + custom name index + SQLite WAL store (Phase 4)."

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
sourcerer-journal = { path = "../sourcerer-journal" }
tantivy = "0.26"
rusqlite = { version = "0.37", features = ["bundled"] }
memmap2 = "0.9"
blake3 = "1"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"
