[package]
name = "sourcerer-indexd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Sourcerer indexer daemon."

[lib]
name = "sourcerer_indexd"
path = "src/lib.rs"

[[bin]]
name = "sourcerer-indexd"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = "0.8"
walkdir = "2"

sourcerer-rpc = { path = "../sourcerer-rpc" }
sourcerer-index = { path = "../sourcerer-index" }
sourcerer-journal = { path = "../sourcerer-journal" }
sourcerer-query = { path = "../sourcerer-query" }
sourcerer-extractors = { path = "../sourcerer-extractors" }
sourcerer-audio = { path = "../sourcerer-audio" }
sourcerer-similarity = { path = "../sourcerer-similarity" }
sourcerer-extractor-host = { path = "../sourcerer-extractor-host" }

[target.'cfg(windows)'.dependencies]
sourcerer-journal-win = { path = "../sourcerer-journal-win" }
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Services",
    "Win32_Storage_FileSystem",
] }

[target.'cfg(target_os = "macos")'.dependencies]
sourcerer-journal-mac = { path = "../sourcerer-journal-mac" }

[target.'cfg(target_os = "linux")'.dependencies]
sourcerer-journal-lin = { path = "../sourcerer-journal-lin" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
