[package]
name = "sourcerer-query"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Sourcerer query DSL parser + executor (Phase 5/9/10)."

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = "0.12"
regex = "1"
unicode-normalization = "0.1"
sourcerer-index = { path = "../sourcerer-index" }
sourcerer-journal = { path = "../sourcerer-journal" }
sourcerer-similarity = { path = "../sourcerer-similarity" }
sourcerer-audio = { path = "../sourcerer-audio" }

[dev-dependencies]
tempfile = "3"
sourcerer-journal = { path = "../sourcerer-journal" }
sourcerer-similarity = { path = "../sourcerer-similarity" }
sourcerer-audio = { path = "../sourcerer-audio" }

[[bench]]
name = "filename_lens"
harness = false
