[package]
name = "freally-ui"
version = "0.20.1"
edition = "2024"
rust-version = "1.85"
license = "LicenseRef-MikeWeaver-Proprietary-AllRightsReserved"
repository = "https://github.com/MikesRuthless12/freally-sourcerer"
authors = ["Mike Weaver <mythodikalone@gmail.com>"]
publish = false
description = "Freally Tauri 2 + Svelte 5 desktop UI."

[lib]
name = "freally_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "freally-ui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-deep-link = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-opener = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trash = "5"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
parking_lot = "0.12"
freally-query = { path = "../../../crates/freally-query" }
freally-rpc = { path = "../../../crates/freally-rpc" }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile = "3"
